feat: add .env.example